manifests/applications/prow/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
  name: op1st-prow-test-pods
