manifests/applications/prow/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/common-name: prow.b4mad.emea.operate-first.cloud
  name: prow.b4mad.emea.operate-first.cloud
spec:
  ingressClassName: openshift-default
  rules:
    - host: prow.b4mad.emea.operate-first.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deck
                port:
                  number: 80
          - path: /hook
            pathType: Prefix
            backend:
              service:
                name: hook
                port:
                  number: 8888
  tls:
    - hosts:
        - prow.b4mad.emea.operate-first.cloud
      secretName: prow.b4mad.emea.operate-first.cloud
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/common-name: prow.operate-first.cloud
  name: prow.operate-first.cloud
spec:
  ingressClassName: openshift-default
  rules:
    - host: prow.operate-first.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deck
                port:
                  number: 80
          - path: /hook
            pathType: Prefix
            backend:
              service:
                name: hook
                port:
                  number: 8888
  tls:
    - hosts:
        - prow.operate-first.cloud
      secretName: prow.operate-first.cloud
